--- a/src/app/components/inventory-list/inventory-list.component.html
+++ b/src/app/components/inventory-list/inventory-list.component.html
@@ -9,8 +9,8 @@
         [formControl]="searchControl"
         placeholder="Search by name or category"
       />
+      @if (searchControl.value) {
       <button
-        *ngIf="searchControl.value"
         matSuffix
         mat-icon-button
         aria-label="Clear"
@@ -18,15 +18,18 @@
       >
         <mat-icon>close</mat-icon>
       </button>
+      }
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Filter by Stock Status</mat-label>
       <mat-select [formControl]="statusFilter">
         <mat-option [value]="null">All</mat-option>
-        <mat-option *ngFor="let status of stockStatusOptions" [value]="status">
+        @for (status of stockStatusOptions; track status) {
+        <mat-option [value]="status">
           {{ status }}
         </mat-option>
+        }
       </mat-select>
     </mat-form-field>
 
@@ -35,9 +38,11 @@
     </button>
   </div>
 
-  <div class="loading-spinner" *ngIf="loading">
+  @if (loading) {
+  <div class="loading-spinner">
     <mat-spinner diameter="40"></mat-spinner>
   </div>
+  }
 
   <div class="mat-elevation-z8 table-container">
     <table mat-table [dataSource]="dataSource" matSort>
